# wc-prediction-markets

./: .gitignore  Anchor.toml  DEMO-SCRIPTS.md  README.md  SETUP.md  TECHNICAL.md  package-lock.json  package.json
app/: .env.local.example  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
app/public/: ball-glass.webm  ball.webm
app/scripts/: sync-idl.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActivityTicker.tsx  AppWalletProvider.tsx  BootIntro.tsx  CommandPalette.tsx  (+40 more)
bot/: .gitignore  DEPLOY.md  package-lock.json  package.json  wrangler.toml
bot/src/: agent.ts  bot.ts  chain.ts  engine.ts  persist.ts  smoke.ts  store.ts  txline.ts  worker.ts
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: constants.rs  errors.rs  lib.rs  merkle.rs  settlement.rs  state.rs  txline_cpi.rs
programs/prediction-market/src/instructions/: claim.rs  commit_result.rs  commit_result_validated.rs  commit_result_verified.rs  dispute_result.rs  finalize_result.rs  init_root_registry.rs  initialize_config.rs  initialize_market.rs  mod.rs  place_bet.rs  resolve_dispute.rs  set_score_root.rs
relayer/: .env.example  package-lock.json  package.json  tsconfig.json
relayer/src/: activate.ts  config.ts  createMarket.ts  demo.ts  index.ts  mintTo.ts  oracle.ts  program.ts  quickMarket.ts  seed.ts  settle.ts  setupDevnet.ts  sim.ts  txodds.ts  validated.ts  verified.ts  verifiedDemo.ts
scripts/: build.sh  gen-idl.js  localnet.sh  test-local.sh
tests/: merkle-verified.ts  prediction-market.ts
(+15 files in other folders)
